refacto, split db collections, display buttons icons
